@@ -117,7 +117,15 @@
 #include "http_log.h"
 
 #ifdef NEXT
+#if NX_CURRENT_COMPILER_RELEASE == 410
+#if __ARCHITECTURE__ == m68k
+#define HZ 64
+#else
+#define HZ 100
+#endif
+#else
 #include <machine/param.h>
+#ndif
 #endif
 
 #define STATUS_MAXLINE		64
